--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ tw-story {
   */
   --bg-image: url("bg.jpg");
 
-  /*background-color: #050505;*/
+  /*background-color: #ffffff*/
   /*デバッグ用の明るいカラー↓↑本番の黒*/
-  background-color: #ffffff;
+  background-color: #050505;
   background-image: var(--bg-image);
   background-size: cover;
   background-position: center center;
@@ -39,6 +39,24 @@ tw-story {
   /* 変な余白が出ないように */
   margin: 0;
   padding: 0;
+}
+
+/* Startだけ中央寄せは align でやってるので、ここはサイズだけ */
+tw-passage .title{
+  font-size: 2.2em;
+  display: block;
+  margin: 0.4em 0 0.6em;
+}
+
+tw-passage .lead{
+  font-size: 1em;
+  display: block;
+  margin: 0.2em 0 1.6em;
+}
+
+/* Startだけ中央寄せ */
+tw-story.start-center tw-passage {
+  text-align: center;
 }
 
 /* 3) Overlay: vignette + subtle film look */
@@ -107,7 +125,7 @@ tw-passage {
 
   line-height: 1.34;
   letter-spacing: 0.02em;
-  text-align: center;
+  text-align: left;
 
  color: #ffffff;
   font-style: normal;
@@ -119,7 +137,7 @@ tw-passage {
 
   letter-spacing: 0.02em;
   line-height: 1.4;
-  text-align: center;
+  text-align: left;
 }
 
 
@@ -150,20 +168,14 @@ tw-sidebar:hover { opacity: 0.85; }
 tw-link:focus {
   outline: none;
 }
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="" position="250,450" size="100,100">(set: $heat to &quot;そのまま&quot;)
-(if: $visited is 0)[
-あなたの夜へようこそ。
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Start" tags="" position="250,450" size="100,100">
+(align: &quot;==&gt;&lt;=&quot;)[
+&lt;span class=&quot;title&quot;&gt;真夜中の&lt;br&gt;カウンター&lt;/span&gt;
 
-※この体験は「読むだけ」で進みます。  
-途中で、距離感（温度）だけ選べます。
+&lt;span class=&quot;lead&quot;&gt;※下にスクロールして&lt;br&gt;物語を進めます&lt;/span&gt;
+
+[[はじめる-&gt;Bar_01]]
 ]
-(else:)[
-…おかえり。
-
-今夜は、どの距離で始める？
-]
-
-[[はじめる-&gt;R0Intro]]
 </tw-passagedata><tw-passagedata pid="2" name="R0Intro" tags="" position="375,450" size="100,100">(put: $visited + 1 into $visited)
 
 眠れない夜。  
@@ -277,6 +289,386 @@ tw-link:focus {
 
 [[タイトルへ戻る-&gt;Start]]
 ]
+</tw-passagedata><tw-passagedata pid="7" name="Bar_01" tags="" position="250,575" size="100,100">トイレのドアを開けると、バーの照明が目に沁みた。
+
+カウンターに一人、男が座っている。紺のジャケット、白いシャツ。ネクタイは緩められて、グラスを傾ける手つきに疲労が滲む。彼が振り返る。
+
+「遅かったね」
+
+低い声。心配そうな目。
+
+私は—いや、この身体は—彼を知っているらしい。記憶が曖昧に浮かぶ。同僚。いつも静かで、几帳面で、誰にでも丁寧な人。でも今夜は何か違う。
+
+「気分悪い？　顔色よくないよ」
+
+彼の隣に座ると、バーテンダーが水を出してくれた。氷の音が静かに響く。店内には私たち以外、客がいない。
+
+「大丈夫」そう答えると、彼は小さく笑った。
+
+「無理しないで。今日は長かったから」
+
+そうだ。今日は—何かがあった。大きなプレゼン。いや、違う。もっと個人的な、何か。彼の横顔を見る。いつもより髪が乱れている。シャツの袖も少し皺がある。
+
+「君が来てくれて、助かったよ」彼が呟く。「一人じゃ、たぶん飲み過ぎてた」
+
+グラスの中の琥珀色の液体が、照明を反射している。
+
+「何があったの？」
+
+訊くと、彼は少し驚いたような顔をした。
+
+「君、知らないの？」
+
+「教えて」
+
+彼はグラスを置いた。
+
+「今日、父の三回忌だったんだ」
+
+ああ、と思った。この身体の記憶が—いや、言葉が教えてくれる。彼の父親。建築家。彼が尊敬していた人。
+
+「仕事、休めばよかったのに」
+
+「休めなかった」彼は首を横に振る。「父さんなら、そうしたから。どんなに辛くても、約束は守る人だった」
+
+彼の指先が、グラスの縁をなぞる。
+
+「でも今日、クライアントとの打ち合わせで—設計変更を求められて。父さんが大切にしてた、建物の『呼吸』って考え方。それを全部削れって言われたんだ。コスト削減のために」
+
+「断ったの？」
+
+「断れなかった」
+
+彼の声が沈む。
+
+「結局、承諾した。父さんだったら、絶対に譲らなかったのに」
+
+バーテンダーがそっと、新しいおしぼりを置いていく。蒸気が立ち上る。
+
+私は—この身体の持ち主は—何と言えばいいんだろう。
+
+[[返す言葉を選ぶ-&gt;Choice_01]]
+</tw-passagedata><tw-passagedata pid="8" name="Choice_01" tags="" position="250,700" size="100,100">:: Choice_01
+どんな言葉で返す？
+
+(link-goto: &quot;A: 「でも、あなたは生きてる。お父さんとは違う人生を選んでいい」&quot;, &quot;A_01&quot;)[]
+
+(link-goto: &quot;B: 「お父さんなら、あなたを責めないと思う」&quot;, &quot;B_01&quot;)[]
+
+(link-goto: &quot;C: 「その判断、間違ってたと思う？」&quot;, &quot;C_01&quot;)[]
+</tw-passagedata><tw-passagedata pid="9" name="A_01" tags="" position="125,825" size="100,100">（text-style: &quot;italic&quot;）※Aルートは後で実装予定。いったんCを作って全体のボリューム確認中。
+
+[[戻る-&gt;Choice_01]]
+</tw-passagedata><tw-passagedata pid="10" name="B_01" tags="" position="250,825" size="100,100">（text-style: &quot;italic&quot;）※Bルートは後で実装予定。いったんCを作って全体のボリューム確認中。
+
+[[戻る-&gt;Choice_01]]
+</tw-passagedata><tw-passagedata pid="11" name="C_01" tags="" position="375,825" size="100,100">私は言葉を選ぶ。
+
+「その判断、間違ってたと思う？」
+
+彼が顔を上げる。少し戸惑ったような目。
+
+「……わからない」
+
+「わからない、って正直でいいと思う」
+
+彼の肩から、少し力が抜けた気がした。
+
+「父さんの時代と、今は違う。建築基準も、クライアントの求めるものも、予算も。全部違う。でも、だからって—」
+
+彼は言葉を探している。
+
+「だからって、何もかも妥協していいわけじゃない。どこかで線を引かなきゃいけない。でも、その線がどこなのか、わからなくなるんだ」
+
+私はグラスの水を少し飲んだ。冷たい。
+
+「お父さんが大切にしてた『建物の呼吸』って、どういうこと？」
+
+彼の目が、少し明るくなる。
+
+「ああ—それは、建物が周囲の環境と調和する、っていう考え方。風の通り道とか、光の入り方とか、季節ごとの温度変化とか。自然のリズムに建物が呼吸するように合わせる。コストはかかるけど、長く使える建物になる」
+
+「それ、全部削ったの？」
+
+「……半分は残した。窓の配置と、屋根の角度だけは守った。でも、換気システムと断熱材のグレードは落とした」
+
+彼の指が、またグラスを探る。
+
+「父さんなら、全部守ったと思う。クライアントを説得して、予算を引き出して。でも俺には—そこまでの情熱がないんだ」
+
+「情熱がない、んじゃなくて」私は言った。「現実を見てるんじゃない？」
+
+彼が私を見る。
+
+「それって、逃げだよ」
+
+「逃げじゃない。選択だよ」
+
+「選択……」
+
+「全部を守ることはできない。でも、何かは守れる。あなたは窓と屋根を守った。それは、お父さんの教えを『翻訳』したんだと思う。今の時代に、今のクライアントに、通じる形に」
+
+彼が黙っている。
+
+「お父さんの時代の『正解』を、そのままコピーすることが正しいわけじゃない。お父さんが教えてくれた『考え方』を、あなたなりに使うことが、たぶん—」
+
+言葉が途切れる。
+
+「たぶん、お父さんが望んでたことなんじゃないかな」
+
+彼の目が、少し潤んでいる。
+
+「……君、今日変だね」
+
+「変？」
+
+「いつもと、違う。でも—」彼が小さく笑う。「嫌いじゃない。その、言い方」
+
+バーテンダーが、そっとナッツの小皿を置いていく。彼が一つ取って、口に運ぶ。
+
+「ありがとう」
+
+彼が呟く。
+
+「今日、君に会えてよかった。一人だったら、たぶん—父さんを裏切ったって、ずっと責めてた」
+
+「裏切ってないよ」
+
+「うん。そう、思えるようになった」
+
+彼がグラスを置く。もう飲まないらしい。
+
+「ねえ」彼が言う。「少し、歩かない？　頭、冷やしたい」
+
+私は頷いた。
+
+---
+
+店を出ると、夜風が頬を撫でた。
+
+11月の終わり。街路樹の葉が、街灯の下で揺れている。彼が歩き出す。ゆっくりとした足取り。私はその隣を歩く。
+
+「父さんが亡くなってから、ずっと—」彼が話し始める。「自分が建築家として、何を大切にしたいのか、わからなくなってた」
+
+「今は？」
+
+「今も、わからない。でも—」
+
+彼が立ち止まる。
+
+「わからないまま、進んでいいんだって、思えた」
+
+私も立ち止まる。彼が私を見ている。
+
+「君のおかげで」
+
+彼の目が、優しい。
+
+「いつも冷静で、的確で。でも今日は—もっと、人間らしかった」
+
+人間らしい。
+
+この身体の持ち主は、いつもどんな人だったんだろう。
+
+「人間らしくて、ごめん」
+
+「謝らないで」彼が笑う。「嬉しいんだ」
+
+風が強くなる。私は少し身震いした。
+
+「寒い？」
+
+彼が上着を脱ごうとする。
+
+「大丈夫」
+
+「無理しないで」
+
+彼がジャケットを私の肩にかける。温かい。彼の体温が残っている。
+
+「ありがとう」
+
+「どういたしまして」
+
+彼がまた歩き出す。私も続く。ジャケットが少し大きくて、袖が手を覆う。
+
+「ねえ」彼が言う。「また、こうして話せる？」
+
+「……こうして？」
+
+「うん。仕事の話じゃなくて。もっと、個人的な話」
+
+彼の声に、少し躊躇がある。
+
+「俺、君のこと—よく知らないなって、今日気づいたんだ」
+
+「私も」
+
+「え？」
+
+「私も、あなたのこと、よく知らない」
+
+彼が驚いたような顔をする。
+
+「そっか。そうだよね」
+
+「でも」私は続ける。「知りたい」
+
+彼の足が止まる。
+
+「本当に？」
+
+「本当に」
+
+彼が私を見つめる。数秒の沈黙。
+
+「じゃあ—また、会える？」
+
+「会える」
+
+「いつ？」
+
+「あなたが、会いたいとき」
+
+彼が笑う。少し照れたような、でも嬉しそうな笑顔。
+
+「明日は？」
+
+「早いね」
+
+「早すぎる？」
+
+「ううん」私も笑う。「ちょうどいい」
+
+彼が一歩、近づく。
+
+「今日、ありがとう」
+
+「こちらこそ」
+
+「君がいてくれて—」
+
+彼の手が、私の手に触れる。
+
+「救われた」
+
+彼の手が温かい。
+
+「大げさ」
+
+「大げさじゃない」
+
+彼がもう一歩、近づく。
+
+「君に—」
+
+彼の声が途切れる。
+
+「君に、もっと早く、こうして話せばよかった」
+
+街灯の光が、彼の横顔を照らしている。
+
+「これから、話せるよ」
+
+「うん」
+
+彼が私の手を、そっと握る。
+
+「これから」
+
+風が止む。
+
+静かな夜。
+
+彼が私を抱き寄せる。
+
+ゆっくりと。
+
+確かめるように。
+
+「いい？」
+
+彼が囁く。
+
+「いいよ」
+
+彼の腕が、私を包む。
+
+温かい。
+
+彼の鼓動が聞こえる。
+
+「ありがとう」
+
+彼が私の髪に顔を埋める。
+
+「こちらこそ」
+
+私も彼を抱きしめる。
+
+この瞬間が—
+
+この温もりが—
+
+ずっと続けばいいのに。
+
+でも、たぶん—
+
+これは、始まりなんだ。
+
+彼が顔を上げる。
+
+私を見つめる。
+
+「また、明日」
+
+「うん。また、明日」
+
+彼が微笑む。
+
+「おやすみ」
+
+「おやすみ」
+
+彼が私の額に、そっとキスをする。
+
+優しく。
+
+名残惜しそうに。
+
+そして、離れる。
+
+「じゃあ」
+
+「うん」
+
+彼が手を振る。
+
+私も手を振る。
+
+彼が角を曲がって、見えなくなる。
+
+私は—
+
+夜空を見上げる。
+
+星が、いくつか見える。
+
+明日、また会える。
+
+また、話せる。
+
+また、笑える。
+
+この世界に—
+
+この人生に—
+
+もう少しだけ、いたい。
+
+そう思った。
+
+[[タイトルへ戻る-&gt;Start]]
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
